# http-server

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  vcpkg.json
include/database/: db.hpp
include/server/: exceptions.hpp  server.hpp  utils.hpp
src/: database.cpp  server.cpp
tests/: send_request.py  test.sh  test_dispatcher.sh  test_rate.sh
